adopt-a-pup/envoy-gateway/envoy-gateway-dc.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: envoy-gateway
    app.kubernetes.io/component: envoy-gateway
    app.kubernetes.io/instance: envoy-gateway
  name: envoy-gateway
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    deploymentconfig: envoy-gateway
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      labels:
        deploymentconfig: envoy-gateway
    spec:
      containers:
      - env:
        - name: ENVOY_YAML
          value: /opt/app-root/config/envoy.yaml
        name: envoy-gateway
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /opt/app-root/config
          name: configuration
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: envoy-gateway
        name: configuration
  test: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - envoy-gateway
      from:
        kind: ImageStreamTag
        name: envoy-gateway:latest
        namespace: adopt-a-pup
    type: ImageChange
